--- a/AutomateWarehouse/Shared/NavMenu.razor
+++ b/AutomateWarehouse/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Products
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="orderLines">
+                <span class="oi oi-plus" aria-hidden="true"></span> Order Lines
+            </NavLink>
+        </li>
     </ul>
 </div>
 
