--- a/AutomateWarehouse/Shared/NavMenu.razor
+++ b/AutomateWarehouse/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
         <span class="oi oi-plus" aria-hidden="true"></span> Customer
       </NavLink>
     </li>
+    <li class="nav-item px-3">
+      <NavLink class="nav-link" href="orderLines">
+        <span class="oi oi-plus" aria-hidden="true"></span> Order line
+      </NavLink>
+    </li>
   </ul>
 </div>
 
