--- a/AutomateWarehouse/Shared/NavMenu.razor
+++ b/AutomateWarehouse/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="allProducts">
+            <NavLink class="nav-link" href="Products">
                 <span class="oi oi-plus" aria-hidden="true"></span> Products
             </NavLink>
         </li>
