--- a/AutomateWarehouse/Shared/NavMenu.razor
+++ b/AutomateWarehouse/Shared/NavMenu.razor
@@ -6,28 +6,33 @@
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-  <ul class="nav flex-column">
-    <li class="nav-item px-3">
-      <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-        <span class="oi oi-home" aria-hidden="true"></span> Home
-      </NavLink>
-    </li>
-    <li class="nav-item px-3">
-      <NavLink class="nav-link" href="counter">
-        <span class="oi oi-plus" aria-hidden="true"></span> Counter
-      </NavLink>
-    </li>
-    <li class="nav-item px-3">
-      <NavLink class="nav-link" href="allProducts">
-        <span class="oi oi-plus" aria-hidden="true"></span> Products
-      </NavLink>
-    </li>
-    <li class="nav-item px-3">
-      <NavLink class="nav-link" href="allCustomers">
-        <span class="oi oi-plus" aria-hidden="true"></span> Customer
-      </NavLink>
-    </li>
-  </ul>
+    <ul class="nav flex-column">
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Home
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="counter">
+                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="allProducts">
+                <span class="oi oi-plus" aria-hidden="true"></span> Products
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="allCustomers">
+                <span class="oi oi-plus" aria-hidden="true"></span> Customer
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="allOrders">
+                <span class="oi oi-plus" aria-hidden="true"></span> Orders
+            </NavLink>
+        </li>
+    </ul>
 </div>
 
 @code {
