--- a/AutomateWarehouse/Pages/CustomerPage.razor
+++ b/AutomateWarehouse/Pages/CustomerPage.razor
@@ -12,6 +12,7 @@
         <th>Name</th>
         <th>Phone</th>
         <th>Email</th>
+        <th>Show dispatched orders</th>
         <th>Delete Customer</th>
         <th>Edit Customer</th>
       </tr>
@@ -25,8 +26,41 @@
             <td>@cust.Name</td>
             <td>@cust.Phone</td>
             <td>@cust.Email</td>
+            <td><button class="btn btn-info" @onclick="(() => SetCustomerForDispatchedOrders ( cust ))">Show</button></td>
             <td><button class="btn btn-danger" @onclick="(() => DeleteCustomer(cust))">Delete</button></td>
             <td><button class="btn btn-info" @onclick="(() => SetCustomerForEdit ( cust ))">Edit</button></td>
+          </tr>
+          <tr>
+            @if (orders != null)
+            {
+              @if (orders.Any())
+              {
+                @foreach (var order in orders)
+                {
+                  @if (cust.Id == order.CustomerId)
+                  {
+                    <table class="table table-bordered">
+                      <thead class="thead-dark">
+                        <tr>
+                          <th>OrderDate</th>
+                          <th>Delivery Address</th>
+                          <th>Payment done</th>
+                          <th>Dispatched</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>@order.OrderDate</td>
+                          <td>@order.DeliveryAddress</td>
+                          <td>@order.PaymentCompleted</td>
+                          <td>@order.Dispatched</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  }
+                }
+              }
+            }
           </tr>
         }
       }
@@ -91,33 +125,6 @@
     </div>
   </div>
 
-  <table class="table table-bordered">
-    <thead class="thead-dark">
-      <tr>
-        <th>OrderDate</th>
-        <th>Phone</th>
-        <th>Email</th>
-        <th>Delete Customer</th>
-        <th>Edit Customer</th>
-      </tr>
-    </thead>
-    <tbody>
-      @if (customers.Any())
-      {
-        @foreach (var cust in customers)
-        {
-          <tr>
-            <td>@cust.Name</td>
-            <td>@cust.Phone</td>
-            <td>@cust.Email</td>
-            <td><button class="btn btn-danger" @onclick="(() => DeleteCustomer(cust))">Delete</button></td>
-            <td><button class="btn btn-info" @onclick="(() => SetCustomerForEdit ( cust ))">Edit</button></td>
-          </tr>
-        }
-      }
-    </tbody>
-  </table>
-
 </div> 
 
   @code {
@@ -125,6 +132,7 @@
     private List<Order> orders;
     Customer NewCustomer = new Customer();
     Customer UpdateCustomer = new Customer();
+    Customer DispatchedCustomer = new Customer();
 
     protected override async Task OnInitializedAsync()
     {
@@ -154,8 +162,21 @@
     private async Task EditCustomer()
     {
       await customerRepo.EditCustomerAsync(UpdateCustomer);
+      UpdateCustomer = new Customer();
       await UpdateGUI();
     }
+
+    public async Task SetCustomerForDispatchedOrders(Customer selected)
+    {
+      DispatchedCustomer = selected;
+      orders = await customerRepo.ShowDispatchedOrdersByCustomer(DispatchedCustomer);
+      await UpdateGUI();
+    }
+    //private async Task ShowDispatchedOrders()
+    //{
+    //  orders = await customerRepo.ShowDispatchedOrdersByCustomer(DispatchedCustomer);
+    //  await UpdateGUI();
+    //}
 
     //To update the GUI by fetching from database async.
     private async Task UpdateGUI()
