--- a/AutomateWarehouse/Shared/NavMenu.razor
+++ b/AutomateWarehouse/Shared/NavMenu.razor
@@ -32,6 +32,11 @@
         <span class="oi oi-plus" aria-hidden="true"></span> Order line
       </NavLink>
     </li>
+    <li class="nav-item px-3">
+      <NavLink class="nav-link" href="allOrders">
+        <span class="oi oi-plus" aria-hidden="true"></span> Orders
+      </NavLink>
+    </li>
   </ul>
 </div>
 
