--- a/AutomateWarehouse/Pages/CustomerPage.razor
+++ b/AutomateWarehouse/Pages/CustomerPage.razor
@@ -12,7 +12,8 @@
         <th>Name</th>
         <th>Phone</th>
         <th>Email</th>
-        <th>Show dispatched orders</th>
+        <th>Show Dispatched orders</th>
+        <th>Show Active orders</th>
         <th>Delete Customer</th>
         <th>Edit Customer</th>
       </tr>
@@ -26,42 +27,121 @@
             <td>@cust.Name</td>
             <td>@cust.Phone</td>
             <td>@cust.Email</td>
-            <td><button class="btn btn-info" @onclick="(() => SetCustomerForDispatchedOrders ( cust ))">Show</button></td>
+            <td><button class="btn btn-info" @onclick="(() => SetCustomerForDispatchedOrders ( cust ))">Dispatched orderse </button></td>
+            <td><button class="btn btn-info" @onclick="(() => SetCustomerForActiveOrders ( cust ))">Active orders</button></td>
             <td><button class="btn btn-danger" @onclick="(() => DeleteCustomer(cust))">Delete</button></td>
             <td><button class="btn btn-info" @onclick="(() => SetCustomerForEdit ( cust ))">Edit</button></td>
           </tr>
           <tr>
-            @if (orders != null)
+
+            @if (dispatchedOrders != null)
             {
-              @if (orders.Any())
+              @if (dispatchedOrders.Any())
               {
-                @foreach (var order in orders)
-                {
-                  @if (cust.Id == order.CustomerId)
+                <td colspan="7">
+                  @foreach (var order in dispatchedOrders)
                   {
-                    <table class="table table-bordered">
-                      <thead class="thead-dark">
-                        <tr>
-                          <th>OrderDate</th>
-                          <th>Delivery Address</th>
-                          <th>Payment done</th>
-                          <th>Dispatched</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td>@order.OrderDate</td>
-                          <td>@order.DeliveryAddress</td>
-                          <td>@order.PaymentCompleted</td>
-                          <td>@order.Dispatched</td>
-                        </tr>
-                      </tbody>
-                    </table>
+                    @if (cust.Id == order.CustomerId)
+                    {
+                      <p>Dispatched orders</p>
+                      <table class="table table-bordered">
+                        <thead class="thead-dark">
+                          <tr>
+                            <th>OrderDate</th>
+                            <th>Delivery Address</th>
+                            <th>Payment done</th>
+                            <th>Dispatched</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>@order.OrderDate</td>
+                            <td>@order.DeliveryAddress</td>
+                            <td>
+                              @if (order.PaymentCompleted == true)
+                              {
+                                <p>Paid</p>
+                              }
+                              else
+                              {
+                                <p>Not paid</p>
+                              }
+                            </td>
+                            <td>
+                              @if (order.Dispatched == true)
+                              {
+                                <p>Dispatched</p>
+                              }
+                              else
+                              {
+                                <p>Not dispatched</p>
+                              }
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    }
                   }
-                }
+                </td>
               }
             }
+
           </tr>
+          <tr>
+
+            @if (activeOrders != null)
+            {
+              @if (activeOrders.Any())
+              {
+            <td colspan="7">
+              @foreach (var order in activeOrders)
+              {
+                @if (cust.Id == order.CustomerId)
+                {
+                  <p>Active orders</p>
+                  <table class="table table-bordered">
+                    <thead class="thead-dark">
+                      <tr>
+                        <th>OrderDate</th>
+                        <th>Delivery Address</th>
+                        <th>Payment done</th>
+                        <th>Dispatched</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>@order.OrderDate</td>
+                        <td>@order.DeliveryAddress</td>
+                        <td>
+                          @if (order.PaymentCompleted == true)
+                          {
+                            <p>Paid</p>
+                          }
+                          else
+                          {
+                            <p>Not paid</p>
+                          }
+                        </td>
+                        <td>
+                          @if (@order.Dispatched == true)
+                          {
+                            <p>Dispatched</p>
+                          }
+                          else
+                          {
+                            <p>Not dispatched</p>
+                          }
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                }
+              }
+            </td>
+                  }
+                  }
+             
+              </tr>
         }
       }
     </tbody>
@@ -69,7 +149,7 @@
 
   <div class="row m-5">
     <div class="col-5 bg-light m-2 justify-content-start">
-      <div class="p-3 mb-3 bg-primary text-white text-center">
+      <div class="p-3 mb-3 bg-secondary text-white text-center">
         Add new Customer
       </div>
       <EditForm Model="@NewCustomer" OnValidSubmit="@AddNewCustomer">
@@ -94,11 +174,8 @@
         </div>
       </EditForm>
     </div>
-  </div>
-
-  <div class="row m-5">
     <div class="col-5 bg-light m-2 justify-content-start">
-      <div class="p-3 mb-3 bg-primary text-white text-center">
+      <div class="p-3 mb-3 bg-secondary text-white text-center">
         Edit Customer
       </div>
       <EditForm Model="@UpdateCustomer" OnValidSubmit="(() => EditCustomer())">
@@ -125,14 +202,20 @@
     </div>
   </div>
 
+  <div class="row m-5">
+   
+  </div>
+
 </div> 
 
   @code {
     private List<Customer> customers;
-    private List<Order> orders;
+    private List<Order> dispatchedOrders;
+    private List<Order> activeOrders;
     Customer NewCustomer = new Customer();
     Customer UpdateCustomer = new Customer();
     Customer DispatchedCustomer = new Customer();
+    Customer ActiveCustomer = new Customer();
 
     protected override async Task OnInitializedAsync()
     {
@@ -168,15 +251,29 @@
 
     public async Task SetCustomerForDispatchedOrders(Customer selected)
     {
+      if(activeOrders != null)
+      {
+        activeOrders.Clear();
+      }
+
       DispatchedCustomer = selected;
-      orders = await customerRepo.ShowDispatchedOrdersByCustomer(DispatchedCustomer);
+      dispatchedOrders = await customerRepo.ShowDispatchedOrdersByCustomer(DispatchedCustomer);
+      DispatchedCustomer = new Customer();
       await UpdateGUI();
     }
-    //private async Task ShowDispatchedOrders()
-    //{
-    //  orders = await customerRepo.ShowDispatchedOrdersByCustomer(DispatchedCustomer);
-    //  await UpdateGUI();
-    //}
+
+    public async Task SetCustomerForActiveOrders(Customer selected)
+    {
+      if(dispatchedOrders != null)
+      {
+        dispatchedOrders.Clear();
+      }
+
+      ActiveCustomer = selected;
+      activeOrders = await customerRepo.ShowActiveOrdersByCustomer(ActiveCustomer);
+      ActiveCustomer = new Customer();
+      await UpdateGUI();
+    }
 
     //To update the GUI by fetching from database async.
     private async Task UpdateGUI()
